--- a/config.json
+++ b/config.json
@@ -1,279 +1,21 @@
 {
   "languages": {
-    "en": "English",
-    "fr": "French",
-    "de": "German",
-    "ha": "Hausa",
-    "apc":"Levantine Arabic",
-    "sw_cd":"Congolese Swahili",
-    "ti":"Tigrinya",
-    "uk":"Ukranian",
-    "kr": "Kanuri",
-    "ff": "Fulfulde",
-    "tr": "Turkish"
+    "es": "Spanish",
+    "ca": "Catalan"
   },
   "models": [
     {
-      "model_type": "nllb",
-      "checkpoint_id": "nllb-200-distilled-600M",
-      "multilingual": true,
-      "load": false,
-      "sentence_split": "nltk",
-      "supported_pairs": ["en-kr", "en-fr", "en-ff", "en-ha"],
-      "pipeline": {
-          "translate": true
-      },
-      "lang_code_map": {"en": "eng_Latn", "tr": "tur_Latn", "fr": "fra_Latn",
-           "kr": "knc_Latn", "ha": "hau_Latn", "ff": "fuv_Latn","rw": "kin_Latn"}
-    },
-    {
-      "model_type": "m2m100",
-      "checkpoint_id": "m2m100_418M",
-      "multilingual": true,
+      "src": "ca",
+      "tgt": "es",
+      "model_type": "ctranslator2",
+      "model_path": "mt-aina-ca-es",
+      "src_sentencepiece_model": "spm.model",
+      "tgt_sentencepiece_model": "spm.model",
       "load": true,
       "sentence_split": "nltk",
-      "supported_pairs": ["en-tr"],
       "pipeline": {
-          "translate": true
-      }
-    },
-    {
-      "model_type": "nllb",
-      "checkpoint_id": "DigitalUmuganda/m2m100_en_kin_from_en_fr",
-      "multilingual": true,
-      "load": true,
-      "alt": "du_en_kin",
-      "sentence_split": "nltk",
-      "supported_pairs": ["en-fr"],
-      "pipeline": {
-          "translate": true
-      }
-    },
-    {
-      "model_type": "nllb",
-      "checkpoint_id": "DigitalUmuganda/...",
-      "multilingual": true,
-      "load": false,
-      "alt": "du_kin_en",
-      "sentence_split": "nltk",
-      "supported_pairs": ["fr-en"],
-      "pipeline": {
-          "translate": true
-      }
-    },
-    {
-      "src": "en",
-      "tgt": "uk",
-      "model_type": "opus",
-      "load": false,
-      "sentence_split": "nltk",
-      "pipeline": {
-        "lowercase": true,
-        "translate": true,
-        "recase": true
-      }
-    },
-    {
-      "src": "uk",
-      "tgt": "en",
-      "model_type": "opus",
-      "load": false,
-      "sentence_split": "nltk",
-      "pipeline": {
-        "lowercase": true,
-        "translate": true,
-        "recase": true
-      }
-    },
-    {
-      "src": "fr",
-      "tgt": "en",
-      "model_type": "opus",
-      "load": false,
-      "sentence_split": "nltk",
-      "pipeline": {
-        "lowercase": true,
-        "translate": true,
-        "recase": true
-      }
-    },
-    {
-      "src": "en",
-      "tgt": "fr",
-      "model_type": "opus",
-      "load": false,
-      "sentence_split": "nltk",
-      "pipeline": {
-        "lowercase": true,
-        "translate": true,
-        "recase": true
-      }
-    },
-    {
-      "src": "ha",
-      "tgt": "en",
-      "model_type": "opus",
-      "model_path": "opus-mt-ha-en",
-      "load": false,
-      "sentence_split": "nltk",
-      "pipeline": {
-        "lowercase": true,
-        "translate": true,
-        "recase": true
-      }
-    },
-    {
-      "src": "en",
-      "tgt": "ha",
-      "model_type": "opus",
-      "load": false,
-      "sentence_split": "nltk",
-      "pipeline": {
-        "lowercase": true,
-        "translate": true,
-        "recase": true
-      }
-    },
-    {
-      "src": "en",
-      "tgt": "de",
-      "model_type": "ctranslator2",
-      "model_path": "ende",
-      "bpe_file": "bpecodes",
-      "load": false,
-      "sentence_split": "nltk",
-      "pipeline": {
-        "lowercase": true,
-        "tokenize": true,
-        "bpe": true,
-        "translate": true,
-        "recase": true
-      }
-    },
-    {
-      "src": "fr",
-      "tgt": "sw_cd",
-      "model_type": "ctranslator2",
-      "model_path": "frsw",
-      "bpe_file": "BPE-mtedmix-6000.codes",
-      "load": false,
-      "sentence_split": "nltk",
-      "pipeline": {
-        "lowercase": true,
-        "tokenize": true,
-        "bpe": true,
-        "translate": true,
-        "recase": true
-      }
-    },
-    {
-      "src": "sw_cd",
-      "tgt": "fr",
-      "model_type": "ctranslator2",
-      "model_path": "swfr",
-      "bpe_file": "BPE-monomix-6000.codes",
-      "load": false,
-      "sentence_split": "nltk",
-      "pipeline": {
-        "lowercase": true,
-        "tokenize": true,
-        "bpe": true,
-        "translate": true,
-        "recase": true
-      }
-    },
-    {
-      "src": "ti",
-      "tgt": "en",
-      "model_type": "ctranslator2",
-      "model_path": "tien",
-      "bpe_file": "BPE-bigmix3a-6000.codes",
-      "load": false,
-      "sentence_split": [
-        "፧",
-        "።",
-        "፨",
-        "?",
-        "!",
-        ":",
-        "“",
-        "”",
-        "\"",
-        "—",
-        "-"
-      ],
-      "pipeline": {
-        "lowercase": true,
-        "tokenize": true,
-        "bpe": true,
-        "translate": true,
-        "recase": true
-      }
-    },
-    {
-      "src": "en",
-      "tgt": "ti",
-      "model_type": "ctranslator2",
-      "model_path": "enti_adapt",
-      "bpe_file": "codes_file6000_en",
-      "load": false,
-      "sentence_split": "nltk",
-      "pipeline": {
-        "lowercase": true,
-        "tokenize": true,
-        "bpe": true,
-        "translate": true,
-        "recase": false
-      }
-    },
-    {
-      "src": "apc",
-      "tgt": "en",
-      "model_type": "ctranslator2",
-      "model_path": "levar-en",
-      "bpe_file": "levarmix.train.mtok.low.bpe-5000.codes",
-      "load": false,
-      "sentence_split": "nltk",
-      "pipeline": {
-        "lowercase": true,
-        "tokenize": true,
-        "bpe": true,
-        "translate": true,
-        "recase": true
-      }
-    },
-    {
-      "src": "en",
-      "tgt": "ha",
-      "model_type": "ctranslator2",
-      "model_path": "enha",
-      "src_sentencepiece_model": "en.model",
-      "tgt_sentencepiece_model": "ha.model",
-      "load": false,
-      "sentence_split": "nltk",
-      "pipeline": {
-        "lowercase": true,
-        "tokenize": false,
         "sentencepiece": true,
-        "translate": true,
-        "recase": true
-      }
-    },
-    {
-      "src": "ha",
-      "tgt": "en",
-      "model_type": "ctranslator2",
-      "model_path": "haen",
-      "src_sentencepiece_model": "en.model",
-      "tgt_sentencepiece_model": "ha.model",
-      "load": false,
-      "sentence_split": "nltk",
-      "pipeline": {
-        "lowercase": true,
-        "tokenize": false,
-        "sentencepiece": true,
-        "translate": true,
-        "recase": true
+        "translate": true
       }
     }
   ]
