--- a/config.json
+++ b/config.json
@@ -8,6 +8,7 @@
       "src": "ca",
       "tgt": "es",
       "model_type": "ctranslator2",
+      "hugging_face_repo_id": "projecte-aina/mt-aina-ca-es",
       "model_path": "mt-aina-ca-es",
       "src_sentencepiece_model": "spm.model",
       "tgt_sentencepiece_model": "spm.model",
@@ -22,6 +23,7 @@
       "src": "es",
       "tgt": "ca",
       "model_type": "ctranslator2",
+      "hugging_face_repo_id": "PlanTL-GOB-ES/mt-plantl-es-ca",
       "model_path": "mt-plantl-es-ca",
       "src_sentencepiece_model": "spm.model",
       "tgt_sentencepiece_model": "spm.model",
