--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-fastapi==0.109.2
+fastapi==0.110.0
 uvicorn==0.27.0.post1
 subword_nmt==0.3.8
 ctranslate2==3.24.0
@@ -7,3 +7,4 @@ nltk==3.8.1
 sentencepiece==0.1.99
 torch==2.2.0
 transformers==4.37.2
+httpx==0.27.0
