--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,14 @@ version: '3.9'
 
 services:
 
-  mt:
-    image: projecteaina/mt-api:v1_ca_es
+  mt-api:
+    image: projecteaina/mt-api:latest
     restart: unless-stopped
     # runtime: nvidia  # Comment out in local
     ports:
       - 8000:8000
     volumes:
-      - .:/app
-      # - ./models:/app/models
-      - ./config.json:/app/config.json
+      - ./models:/app/models
     environment:
       - MT_API_CONFIG=/app/config.json
       # - MT_API_DEVICE=gpu #or gpu, if so make runtime:nvidia
@@ -19,4 +17,3 @@ services:
       - MODELS_ROOT=/app/models
       - NVIDIA_VISIBLE_DEVICES=all
       - NVIDIA_DRIVER_CAPABILITIES=all
-
