--- a/config.json
+++ b/config.json
@@ -8,8 +8,8 @@
       "src": "ca",
       "tgt": "es",
       "model_type": "ctranslator2",
-      "hugging_face_repo_id": "projecte-aina/mt-aina-ca-es",
-      "model_path": "mt-aina-ca-es",
+      "hugging_face_repo_id": "projecte-aina/aina-translator-ca-es",
+      "model_path": "aina-translator-ca-es",
       "src_sentencepiece_model": "spm.model",
       "tgt_sentencepiece_model": "spm.model",
       "sentence_split": "nltk",
@@ -22,8 +22,8 @@
       "src": "es",
       "tgt": "ca",
       "model_type": "ctranslator2",
-      "hugging_face_repo_id": "PlanTL-GOB-ES/mt-plantl-es-ca",
-      "model_path": "mt-plantl-es-ca",
+      "hugging_face_repo_id": "projecte-aina/aina-translator-es-ca",
+      "model_path": "aina-translator-es-ca",
       "src_sentencepiece_model": "spm.model",
       "tgt_sentencepiece_model": "spm.model",
       "sentence_split": "nltk",
