Add tests action

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,8 +1,11 @@
-name:Python Unit Tests
+name: Python Unit Tests
 
 
 on:
   workflow_dispatch:
+  pull_request:
+    branches:
+    - main
 
 jobs:
   run-tests:
