--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 fastapi==0.110.0
 uvicorn==0.29.0
 subword_nmt==0.3.8
-ctranslate2==4.3.0
+ctranslate2==4.3.1
 sacremoses==0.1.1
 nltk==3.8.1
 sentencepiece==0.2.0
 torch==2.3.0
 transformers==4.41.0
 httpx==0.27.0
+protobuf==5.28.3
+
