--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ sacremoses==0.1.1
 nltk==3.8.1
 sentencepiece==0.2.0
 torch==2.3.0
-transformers==4.41.0
+transformers==4.46.3
 httpx==0.27.0
 protobuf==5.28.3
+accelerate==1.0.1
 
